# ceshijiaobenDB-01

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/common/: logging_config.py
src/config/: app_config.py
src/gui/: main_window.py
src/scripts/: browser_automation_task.py  chrome_automation.py
tests/: test_chrome_automation.py
