[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ceshijiaoben-db-01"
version = "1.0.0"
description = "浏览器自动化测试脚本项目"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "测试项目团队"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "PyQt5>=5.15.0",
    "opencv-python>=4.8.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/ssf0375/ceshijiaobenDB-01"
Repository = "https://github.com/ssf0375/ceshijiaobenDB-01"
Issues = "https://github.com/ssf0375/ceshijiaobenDB-01/issues"

[project.scripts]
cesui = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]